# College-Bus-Management-System-C-

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  student.cpp  student.h
